--- a/src/pages/home/homeModels/PostCompose/postCompose.css
+++ b/src/pages/home/homeModels/PostCompose/postCompose.css
@@ -4,6 +4,9 @@
     width: 100%;
     >textarea,>input{
         width: 100%;
+        min-width: 500px;
+        min-height: 100px;
+        
     }
     > div{
         padding: 0;
