--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -12,6 +12,10 @@ nav{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    >li > a{
+        text-decoration: none;
+        color: #343434;
+    }
     }
     @media(min-width: 550px){
         z-index: 0;
@@ -36,4 +40,15 @@ nav{
     @media(min-width: 550px){
         display: none;
     }
+}
+
+.nav-icons > svg{
+    height: 2rem;
+    width: 2rem;
+    color: #343434;
+    text-decoration: none;
+}
+
+.nav-icons{
+    font-size: 2rem;
 }
