--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -3,21 +3,33 @@
     flex-flow: column wrap;
     max-width: 100%;
     position: relative;
+    border: 1px solid gainsboro;
+    border-bottom: none;
+    padding: 0.5rem;
 }
 
 .post-user{
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
     gap: 2%;
     >div >img{
-        height: 100%;
-        width: 100%;
+        height: 50px;
+        width: 50px;
+        object-fit: cover;
+        border-radius: 50%;
+        position: absolute;
+        right: 50%;
+        top: 50%;
+        transform: translate(50%,-50%);
     }
     >:nth-child(1){
-        flex-basis: 20%;
+        flex-basis: 15%;
+        position: relative;
     }
     >:nth-child(2){
-        flex-basis: 75%;
+        flex-basis: 80%;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
@@ -31,6 +43,12 @@
     flex-flow: column wrap;
     width: 100%;
     height: auto;
+    >p{
+        letter-spacing: 1px;
+        line-height: 1.7rem;
+        text-align: justify;
+        font-size: 14px;
+    }
     >div{
         background-color: beige;
         >img{
@@ -41,7 +59,7 @@
     }
 }
 
-.modal-container{
+/* .modal-container{
     position: relative;
     background-color: aqua;
 }
@@ -57,7 +75,7 @@
     right: 0;
     top: 0;
     margin: 0;
-}
+} */
 
 .post-settings-button{
     border: none;
@@ -67,12 +85,14 @@
 
 .post-settings-content{
     display: none;
-    background-color: red;
+    border: 1px solid gainsboro;
+    box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px, rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
+    border-radius: 5px;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 110%;
     min-width: 5rem;
-    z-index: 3;
+    background-color: white;
 }
 
 .post-settings-content:hover, .post-settings-content:active{
@@ -95,4 +115,17 @@
     width: 100%;
     height: 100%;
     z-index: -2;
+}
+
+.post-icons {
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    gap: 2%;
+    >li{
+        cursor: pointer;
+    }
 }
