--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Raleway', sans-serif;
+  color: #343434;
+  scroll-behavior: smooth
+}
+*, *::before, *::after {
+  box-sizing: inherit;
+  Margin:0;
+  Padding:0;
+  Border:0; 
+}
+
+:root{
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semi-bold: 600;
+  --font-weight-bold: 700;
+}
+
+textarea{
+  border: 1px solid #343434;
+}
+
 button {
-  border-radius: 8px;
-  border: 1px solid black;
+  border-radius: 2rem;
+  background-color: rgb(15, 20, 25);
+  color: white;
+  border: 1px solid #343434;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5%;
   margin: 0 auto;
+  cursor: pointer;
+  font-weight: var(--font-weight-bold);
 }
 button:hover {
   border-color: #646cff;
