--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,7 +1,7 @@
 .post{
     display: flex;
     flex-flow: column wrap;
-    max-width: 100%;
+    width: 100%;
     position: relative;
     border: 1px solid gainsboro;
     border-bottom: none;
@@ -43,14 +43,14 @@
     flex-flow: column wrap;
     width: 100%;
     height: auto;
+    padding: 0 10px;
     >p{
         letter-spacing: 1px;
-        line-height: 1.7rem;
+        line-height: 1.5rem;
         text-align: justify;
-        font-size: 14px;
+        font-size: 15px;
     }
     >div{
-        background-color: beige;
         >img{
             width: 100%;
             height: 100%;
